k3s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: test-ingress-backend
  namespace: test
spec:
  rules:
  - host: test.tino.sh
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: test-backend-service
            port: 
              number: 8080
  tls:
  - hosts:
    - test.tino.sh
    secretName: test-tino-sh-tls
